# sonex

./: .env.example  .gitignore  AGENTS.md  biome.jsonc  docker-compose.yml  index.html  package.json  tsconfig.json  turbo.json  vite.config.ts
.opencode/agent/: system-architect.md
apps/api/: .env.example  .gitignore  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/desktop/: .env.example  components.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/examples/: test-migrations.rs
apps/desktop/src-tauri/migrations/: 001_orchestration_events.sql  003_checkpoint_diff_blobs.sql  004_provider_session_runtime.sql  006_thread_session_runtime_mode.sql  007_thread_message_attachments.sql  009_provider_session_runtime_mode.sql  011_orchestration_thread_created_runtime_mode.sql  012_threads_interaction_mode.sql  013_thread_proposed_plans.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/db/: connection.rs  migrations.rs
apps/desktop/src-tauri/src/ipc/: types.rs
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 002_orchestration_command_receipts.sql  005_projections.sql  (+2 more)
tasks/: 00-roadmap.md  01-core-ui-routing.md  02-chat-mechanics.md  03-diff-rendering-state.md  04-ipc-bridge-tauri.md  05-workspace-persistence-rust.md  06-auth-saas-layer.md  07-anthropic-orchestration.md  07-auth-saas-layer.md  08-git-terminal.md  09-orchestration-engine.md  10-checkpointing-system.md  11-keybindings-settings.md  12-desktop-native.md  ref.md
(+104 files in other folders)
