[package]
name = "sonex"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sonex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "migrate"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# File system
walkdir = "2"
ignore = "0.4"
notify = "7"
trash = "5"

# Image processing
image = "0.25"
infer = "0.16"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Rate limiting
governor = "0.6"

# Security
sha2 = "0.10"

# Environment variables
dotenvy = "0.15"
rust-s3 = { version = "0.37.1", features = ["tokio-rustls-tls"] }

